--- a/Mern/Express/package.json
+++ b/Mern/Express/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "sequelize": "^6.35.1",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0"
   }
 }
